Add r-button component with properties, events, and styles; update package and index files for integration with Ionic

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
       "import": "./dist/components/my-component.js",
       "types": "./dist/components/my-component.d.ts"
     },
+    "./r-button": {
+      "import": "./dist/components/r-button.js",
+      "types": "./dist/components/r-button.d.ts"
+    },
     "./loader": {
       "import": "./loader/index.js",
       "require": "./loader/index.cjs",
