--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "src"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.stories.ts",
+    "**/*.stories.tsx",
+    ".storybook"
   ]
 }
