Implement theming system for Refactico Design System, including global theme injection, light/dark themes, and an automated Ionic variable mapping generator. Update Stencil configuration to include global styles and enhance r-button component for full-width support. Add comprehensive token definitions for colors, spacing, typography, borders, and shadows. Introduce new theme management utilities and documentation for theme implementation.

--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "loader/"
   ],
   "scripts": {
+    "generate:ionic-mapping": "ts-node scripts/generate-ionic-mapping.ts",
+    "prebuild": "npm run generate:ionic-mapping",
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
@@ -87,7 +89,7 @@
     "jest-cli": "^29.7.0",
     "puppeteer": "^24.3.0",
     "storybook": "^8.1.0",
-    "ts-loader": "^9.5.4"
-  },
-  "dependencies": {}
+    "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2"
+  }
 }
