Update package.json script for TypeScript project compatibility, enhance Storybook preview configuration to exclude decorators and transform source code, and refine Ionic color mappings in CSS files for improved theming consistency. Add TypeScript compatibility to ionic-mapping.config.ts.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "loader/"
   ],
   "scripts": {
-    "generate:ionic-mapping": "ts-node scripts/generate-ionic-mapping.ts",
+    "generate:ionic-mapping": "ts-node --project tsconfig.scripts.json scripts/generate-ionic-mapping.ts",
     "prebuild": "npm run generate:ionic-mapping",
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
