--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 6006 --no-open"
   },
   "peerDependencies": {
     "@ionic/core": "^8.0.0"
@@ -77,18 +76,16 @@
   "devDependencies": {
     "@ionic/core": "^8.7.9",
     "@stencil/core": "^4.38.3",
-    "@storybook/addon-essentials": "^8.1.0",
-    "@storybook/addon-interactions": "^8.1.0",
-    "@storybook/addon-links": "^8.1.0",
-    "@storybook/html": "^8.1.0",
-    "@storybook/html-webpack5": "^8.1.0",
+    "@stencil/storybook-plugin": "^0.5.6",
+    "@storybook/addon-docs": "9.1.16",
+    "@storybook/addon-links": "9.1.16",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.26",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "puppeteer": "^24.3.0",
-    "storybook": "^8.1.0",
+    "storybook": "9.1.16",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2"
   }
