Update theme bundling and Storybook configuration
- Updated `custom-elements.json` timestamp for metadata.
- Added a new script `bundle:theme` in `package.json` to bundle theme CSS into a single file.
- Created `scripts/bundle-theme.css.ts` to resolve and bundle theme CSS imports.
- Imported the bundled theme CSS in Storybook's preview configuration.
- Modified `preview-head.html` to include styling for documentation layout.
- Adjusted button story components to remove unnecessary children props for cleaner rendering.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
       "types": "./loader/index.d.ts",
       "import": "./loader/index.js",
       "require": "./loader/index.cjs"
+    },
+    "./theme.css": {
+      "default": "./dist/theme.css"
     }
   },
   "repository": {
@@ -57,8 +60,10 @@
   ],
   "scripts": {
     "generate:ionic-mapping": "ts-node --project tsconfig.scripts.json scripts/generate-ionic-mapping.ts",
+    "bundle:theme": "ts-node --project tsconfig.scripts.json scripts/bundle-theme.css.ts",
     "prebuild": "npm run generate:ionic-mapping",
     "build": "stencil build",
+    "postbuild": "npm run bundle:theme",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
