Implement CSS variable generation and update theme structure
- Added `IONIC_CONFIGURABLE_VARIABLES.md` to document configurable CSS variables for Ionic.
- Introduced `scripts/generate-tokens-css.ts` to automate the generation of CSS variables from TypeScript token definitions.
- Updated `package.json` to include a new script for generating CSS tokens.
- Refactored theme files to utilize generated CSS variables, enhancing consistency across themes.
- Adjusted `ionic-bridge.css` to map Ionic color variables to the new CSS variable structure.
- Updated `custom-elements.json` timestamp for metadata consistency.

--- a/package.json
+++ b/package.json
@@ -59,9 +59,10 @@
     "loader/"
   ],
   "scripts": {
+    "generate:tokens-css": "ts-node --project tsconfig.scripts.json scripts/generate-tokens-css.ts",
     "generate:ionic-mapping": "ts-node --project tsconfig.scripts.json scripts/generate-ionic-mapping.ts",
     "bundle:theme": "ts-node --project tsconfig.scripts.json scripts/bundle-theme.css.ts",
-    "prebuild": "npm run generate:ionic-mapping",
+    "prebuild": "npm run generate:tokens-css && npm run generate:ionic-mapping",
     "build": "stencil build",
     "postbuild": "npm run bundle:theme",
     "start": "stencil build --dev --watch --serve",
