Update package version to 0.0.3, streamline installation instructions in README, and implement lazy loading for Ionic components. Added auto-initialization for Ionic in button and input components to enhance performance and reduce bundle size.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refactico/design-system",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Refactico Design System - A comprehensive component library built with Stencil and Ionic for mobile and web applications",
   "keywords": [
     "design-system",
@@ -70,16 +70,10 @@
     "generate": "stencil generate",
     "storybook": "storybook dev -p 6006 --no-open"
   },
-  "peerDependencies": {
-    "@ionic/core": "^8.0.0"
-  },
-  "peerDependenciesMeta": {
-    "@ionic/core": {
-      "optional": false
-    }
+  "dependencies": {
+    "@ionic/core": "^8.7.9"
   },
   "devDependencies": {
-    "@ionic/core": "^8.7.9",
     "@stencil/core": "^4.38.3",
     "@stencil/storybook-plugin": "^0.5.6",
     "@storybook/addon-docs": "9.1.16",
