ci(design-system): add GitHub Pages deployment workflow for Storybook
- Add GitHub Actions workflow to automatically deploy Storybook to GitHub Pages on main branch pushes
- Configure workflow with Node.js 20 and pnpm 9 for consistent build environment
- Include steps to build Stencil components and generate Storybook static files
- Add .nojekyll file to ensure proper GitHub Pages configuration
- Update package.json repository URL to point to refactico/design-system
- Simplify package.json exports by removing individual component exports and theme duplicates
- Enables automated documentation deployment for improved component library accessibility

--- a/package.json
+++ b/package.json
@@ -13,28 +13,16 @@
       "import": "./dist/refactico-ds/refactico-ds.esm.js",
       "require": "./dist/refactico-ds/refactico-ds.cjs.js"
     },
-    "./r-button": {
-      "import": "./dist/components/r-button.js",
-      "types": "./dist/components/r-button.d.ts"
-    },
-    "./r-button-group": {
-      "import": "./dist/components/r-button-group.js",
-      "types": "./dist/components/r-button-group.d.ts"
-    },
-    "./theme": {
-      "import": "./dist/refactico-ds/theme/theme.css",
-      "require": "./dist/refactico-ds/theme/theme.css"
-    },
-    "./theme.css": "./dist/refactico-ds/theme/theme.css",
     "./loader": {
       "import": "./loader/index.js",
       "require": "./loader/index.cjs",
       "types": "./loader/index.d.ts"
-    }
+    },
+    "./theme.css": "./dist/refactico-ds/theme/theme.css"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/stenciljs/component-starter.git"
+    "url": "https://github.com/refactico/design-system.git"
   },
   "files": [
     "dist/",
